--- a/src/app/pages/student/rank/rank.page.html
+++ b/src/app/pages/student/rank/rank.page.html
@@ -1,35 +1,11 @@
-<ion-header>
-  <ion-toolbar class="font-comic-sans bg-gradient-to-b from-purple-600 to-purple-900 text-white">
-    <ion-buttons>
-      <ion-back-button text="" defaultHref="/" class="text-white ml-1"></ion-back-button>
-    </ion-buttons>
-    <div class="relative flex items-start justify-between w-full pl-5 pt-1 pb-28">
-      <div class="flex-grow">
-        <h1 *ngIf="activeTab === 'rank'" class="text-2xl font-semibold text-white m-0 p-0">
-          {{ TranslateKeys.TITLE_YOUR_RANK | translate }}
-        </h1>
-        <h1 *ngIf="activeTab === 'achievements'" class="text-2xl font-semibold text-white m-0 p-0">
-          {{ TranslateKeys.TITLE_YOUR_ACHIEVEMENTS | translate }}
-        </h1>
-      </div>
-      <div class="flex-1"></div>
-      <div class="absolute -right-12 -bottom-2">
-        <img src="assets/images/ranking.png" alt="Character" class="w-[170px] h-auto max-h-[170px] object-contain">
-      </div>
-    </div>
-  </ion-toolbar>
-  <!-- Tab navigation -->
-  <div class="absolute bottom-1 left-0 right-0 z-10 mx-0.5">
-    <ion-segment [value]="activeTab" (ionChange)="switchTab($event.detail.value)" mode="ios" class="bg-white dark:bg-gray-800 rounded">
-      <ion-segment-button value="rank" class="font-comic-sans text-sm font-medium">
-        {{ TranslateKeys.TITLE_RANK | translate }}
-      </ion-segment-button>
-      <ion-segment-button value="achievements" class="font-comic-sans text-sm font-medium">
-        {{ TranslateKeys.TITLE_ACHIEVEMENTS | translate }}
-      </ion-segment-button>
-    </ion-segment>
-  </div>
-</ion-header>
+<app-header
+  [pageTitle]="activeTab === 'rank' ? TranslateKeys.TITLE_YOUR_RANK : TranslateKeys.TITLE_YOUR_ACHIEVEMENTS"
+  backgroundImageUrl="/assets/images/banner.svg"
+  [segment]="segment"
+  [animeImage]="animeImage"
+  [animation]="animation"
+  (changeSegment)="switchTab($event)">
+</app-header>
 
 <ion-content [fullscreen]="true" class="font-comic-sans">
   <!-- Loading spinner -->
@@ -42,7 +18,7 @@
     <div class="flex justify-around items-end pt-8 px-2.5 relative" *ngIf="rankList.length > 0">
       <div class="flex flex-col items-center text-center w-1/3" *ngIf="rankList.length > 1 && rankList[1]">
         <div class="relative mb-2">
-          <img src="assets/images/trophy_2.png" alt="Silver Medal" class="w-[100px] h-auto block mx-auto mb-1">
+          <img src="../../../../assets/images/rank/trophy_2.png" alt="Silver Medal" class="w-[100px] h-auto block mx-auto mb-1">
           <div class="absolute bottom-[18px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
             {{ rankList[1].points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
@@ -59,7 +35,7 @@
 
       <div class="flex flex-col items-center text-center w-1/3 transform -translate-y-12" *ngIf="rankList[0]">
         <div class="relative mb-2">
-          <img src="assets/images/trophy_1.png" alt="Gold Trophy" class="w-[150px] h-auto block mx-auto mb-1">
+          <img src="../../../../assets/images/rank/trophy_1.png" alt="Gold Trophy" class="w-[150px] h-auto block mx-auto mb-1">
           <div class="absolute bottom-[24px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
             {{ rankList[0].points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
@@ -76,7 +52,7 @@
 
       <div class="flex flex-col items-center text-center w-1/3" *ngIf="rankList.length > 2 && rankList[2]">
         <div class="relative mb-2">
-          <img src="assets/images/trophy_3.png" alt="Bronze Medal" class="w-[100px] h-auto block mx-auto mb-1">
+          <img src="../../../../assets/images/rank/trophy_3.png" alt="Bronze Medal" class="w-[100px] h-auto block mx-auto mb-1">
           <div class="absolute bottom-[18px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
             {{ rankList[2].points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
