fix(live-upadte-app): Fix lỗi safe-area-inset-top trên thiết bị ios

--- a/src/app/pages/student/home/home.page.scss
+++ b/src/app/pages/student/home/home.page.scss
@@ -3,6 +3,7 @@ ion-toolbar.home-toolbar {
   --background: #ffffff;
   --padding-start: 0;
   --padding-end: 0;
+  --padding-top: env(safe-area-inset-top) !important;
 }
 
 :host-context(.dark) ion-toolbar.home-toolbar {
