--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -16,7 +16,7 @@
 
 /*---------------------- Lock screen ---------------------*/
 .ios-lock-screen {
-  background: white;
+  background: #959595;
   padding: 20px;
   height: 100%;
   width: 100%;
