--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,17 +25,17 @@
             <ion-col size="12">
               <div class="w-full px-5 py-6 bg-gray-100/20 border border-solid border-gray-400 rounded-[20px]">
                 <ion-row>
-                  <!-- Nhập số điện thoại -->
+                  <!-- Nhập tên tài khoản -->
                   <ion-col size="12" class="pb-5">
-                    <ion-label>{{ TranslateKeys.TITLE_PHONE | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
-                    <ion-input formControlName="phone" type="tel" inputmode="tel" required="required" (ionInput)="onUsernameInput($event)"
+                    <ion-label>{{ TranslateKeys.TITLE_ACCOUNT | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
+                    <ion-input formControlName="username" type="text" inputmode="text" required="required" (ionInput)="onUsernameInput($event)"
                                (ionBlur)="onBlurUsernameInput()" [clearInput]="true"></ion-input>
-                    <div *ngIf="hasError('phone', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
-                      {{ TranslateKeys.VALIDATE_PHONE_REQUIRED | translate }}
+                    <div *ngIf="hasError('username', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
+                      {{ TranslateKeys.VALIDATE_ACCOUNT_REQUIRED | translate }}
                     </div>
 
-                    <!-- Gợi ý chọn tài khoản (số điện thoại) -->
-                    <div *ngIf="filteredAccounts.length && showSuggestions && !hasError('phone', 'required')" class="suggestions">
+                    <!-- Gợi ý chọn tài khoản -->
+                    <div *ngIf="filteredAccounts.length && showSuggestions && !hasError('username', 'required')" class="suggestions">
                       <ion-list lines="full">
                         <ion-item button *ngFor="let acc of filteredAccounts" (click)="selectUsername(acc)">
                           {{ acc.username }}
