--- a/src/app/pages/student/profile/profile.page.html
+++ b/src/app/pages/student/profile/profile.page.html
@@ -4,11 +4,11 @@
     <ion-list class="mb-2">
       <ion-item lines="none" detail="false" routerLink="/{{PageRoutes.PERSONAL_DIARY}}">
         <ion-avatar aria-hidden="true" slot="start">
-          <img alt="Silhouette of a person's head" [src]="authData.avatar" *ngIf="authData.avatar"/>
-          <img alt="Silhouette of a person's head" src="../../../../assets/icons/svg/avatar.svg" *ngIf="!authData.avatar"/>
+          <img alt="Silhouette of a person's head" [src]="getUserAvatarImage()"/>
         </ion-avatar>
         <ion-label>
-          {{ authData.name }} <br>
+          <ng-container *ngIf="authData.nickname">{{ authData.nickname }}<br></ng-container>
+          <ng-container *ngIf="!authData.nickname">{{ TranslateKeys.TITLE_NOT_SET_NICKNAME | translate }}<br></ng-container>
           <span class="text-sm text-gray-500 italic dark:text-gray-400">{{ TranslateKeys.TITLE_VIEW_PROFILE_PAGE | translate }}</span>
         </ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
@@ -69,7 +69,7 @@
         <ion-label class="py-2">{{ TranslateKeys.TITLE_ACCOUNT_AND_SECURITY | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item [routerLink]="PageRoutes.PRIVACY_RIGHTS" detail="false">
+      <ion-item [routerLink]="PageRoutes.PRIVACY_RIGHTS" detail="false" class="hidden">
         <ion-icon name="lock-closed" slot="start" color="primary" class="text-xl"></ion-icon>
         <ion-label class="py-2">{{ TranslateKeys.TITLE_PRIVACY_RIGHTS | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
@@ -83,7 +83,7 @@
 
     <!--  Chính sách, hỗ trợ  -->
     <ion-list class="mb-2">
-      <ion-item detail="false" (click)="onClickUpdateApp()" *ngIf="platform.is(NativePlatform.CAPACITOR)">
+      <ion-item detail="false" lines="none" (click)="onClickUpdateApp()" *ngIf="platform.is(NativePlatform.CAPACITOR)">
         <ion-icon name="cog" slot="start" color="primary" class="text-xl"></ion-icon>
         <ion-label class="py-2">
           {{ TranslateKeys.TITLE_APP_UPDATE | translate }}<br>
@@ -91,17 +91,17 @@
         </ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item [routerLink]="PageRoutes.REPORT_PROBLEMS" detail="false">
+      <ion-item [routerLink]="PageRoutes.REPORT_PROBLEMS" detail="false" class="hidden">
         <ion-icon name="warning" slot="start" color="primary" class="text-xl"></ion-icon>
         <ion-label class="py-2">{{ TranslateKeys.TITLE_REPORT_PROBLEMS | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item [routerLink]="PageRoutes.CONTACT_AND_SUPPORT" detail="false">
+      <ion-item [routerLink]="PageRoutes.CONTACT_AND_SUPPORT" detail="false" class="hidden">
         <ion-icon name="help-circle" slot="start" color="primary" class="text-xl"></ion-icon>
         <ion-label class="py-2">{{ TranslateKeys.TITLE_CONTACT_AND_SUPPORT | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item [routerLink]="PageRoutes.TERMS_AND_POLICIES" lines="none" detail="false">
+      <ion-item [routerLink]="PageRoutes.TERMS_AND_POLICIES" lines="none" detail="false" class="hidden">
         <ion-icon name="document-text" slot="start" color="primary" class="text-xl"></ion-icon>
         <ion-label class="py-2">{{ TranslateKeys.TITLE_TERMS_AND_POLICIES | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
