--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -26,7 +26,7 @@ ion-header {
 
   ion-searchbar {
     --background: rgba(255, 255, 255, 0.7);
-    --box-shadow: 1px 0 5px rgba(0, 0, 0, 0.4);
+    --box-shadow: none;
     --color: #333333;
     --icon-color: #333333;
     --placeholder-color: #333333;
