--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,11 +4,15 @@
     <ion-buttons slot="start">
       <ion-back-button text="" mode="ios" [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
+    <ion-label *ngIf="pageTitle && !caption && !animeImage && !searchbar && !animation && !segment"
+               class="text-base text-white">
+      {{ pageTitle | translate }}
+    </ion-label>
   </ion-toolbar>
 
   <!-- Page title -->
-  <div *ngIf="pageTitle" class="block pt-2 ion-padding-start ion-padding-end" [class]="(animation || animeImage) ? 'w-2/3' : 'w-full'">
-    <h1 class="text-2xl font-semibold text-white m-0 p-0">
+  <div *ngIf="pageTitle && (caption || animeImage || searchbar || animation || segment)" class="block pt-2 ion-padding-start ion-padding-end" [class]="(animation || animeImage) ? 'w-2/3' : 'w-full'">
+    <h1 class="text-2xl font-semibold text-white m-0 p-0" [class.pb-3]="!caption">
       {{ pageTitle | translate }}
     </h1>
     <p *ngIf="caption" class="text-base italic pb-3">
