--- a/src/app/shared/components/select-datetime/select-datetime.component.html
+++ b/src/app/shared/components/select-datetime/select-datetime.component.html
@@ -1,18 +1,21 @@
-<ion-row>
-  <ion-col size="12" class="p-0">
-    <ion-label *ngIf="label">{{ label }}<span class="ion-color-danger" *ngIf="required">*</span></ion-label>
-    <ion-input [disabled]="disabled" *ngIf="platform.is('mobileweb')" [value]="default ? defaultStr : null" [id]="id" mode="ios" [placeholder]="placeholder" readonly="readonly" [class]="(classList || '') + ' select-date-input'"></ion-input>
-    <ion-input [disabled]="disabled" *ngIf="!platform.is('mobileweb')" [value]="default ? defaultStr : null" mode="ios" [placeholder]="placeholder" readonly="readonly" [class]="(classList || '') + ' select-date-input'"
-               (click)="onClickSelectDateTime()"></ion-input>
-    <ion-icon name="close-circle" color="danger" *ngIf="showClearButton && default" class="ion-clear-date {{label?'':'no-label'}}" (click)="onSelectedDatetime(null, null)"></ion-icon>
-  </ion-col>
-</ion-row>
-
+<ion-item lines="none" class="select-date-item min-w-36">
+  <ion-label slot="start" *ngIf="label">{{ label }}<span class="ion-color-danger" *ngIf="required">*</span></ion-label>
+  <ion-input [disabled]="disabled" *ngIf="platform.is('mobileweb')" fill="outline"
+             [value]="default ? defaultStr : null" [id]="id" mode="ios"
+             [placeholder]="placeholder" readonly="readonly"
+             [class]="(classList || '') + ' select-date-input'"></ion-input>
+  <ion-input [disabled]="disabled" *ngIf="!platform.is('mobileweb')" fill="outline"
+             [value]="default ? defaultStr : null" mode="ios"
+             [placeholder]="placeholder" readonly="readonly"
+             [class]="(classList || '') + ' select-date-input'"
+             (click)="onClickSelectDateTime()"></ion-input>
+  <ion-icon slot="end" name="close-circle" color="medium" *ngIf="showClearButton && default" class="ion-clear-date text-base {{label?'':'no-label'}}" (click)="onSelectedDatetime(undefined, null)"></ion-icon>
+</ion-item>
 <ng-container *ngIf="platform.is('mobileweb') && !disabled">
   <ion-modal [keepContentsMounted]="false" [trigger]="id" class="select-date-modal fullscreen" mode="ios" animated="false">
     <ng-template>
       <ion-content (click)="onClickOutOfDatetimeGrid($event)">
-        <ion-datetime #popoverDatetime mode="ios" locale="vi-VN" showDefaultButtons="false" size="cover"
+        <ion-datetime #popoverDatetime mode="ios" [locale]="localStr" showDefaultButtons="false" size="cover"
                       [presentation]="presentationType"
                       [value]="(typeof default !== 'boolean' && default?.length) ? default?.toString() : null"
                       [min]="minDate?.length ? minDate : minYear"
